--- a/index.html
+++ b/index.html
@@ -495,60 +495,107 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= certificate Section ======= -->
-    <section id="certificate" class="gallery">
+    <section id="certificate" class="certificates-section">
 
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Certificates</h2>
+          <p>Professional certifications and achievements that showcase my expertise and continuous learning journey.</p>
         </div>
       </div>
 
-      <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row g-0">
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <!-- <a href="assets/img/Certificate/Angular essential Training_LinkedIn Learning Certificate/Angular essential Training_LinkedIn Learning Certificate-1.png"
-                class="gallery-lightbox" data-gall="gallery-item"> -->
-                <img
-                  src="assets/img/Certificate/Angular essential Training_LinkedIn Learning Certificate/Angular essential Training_LinkedIn Learning Certificate-1.png"
-                  alt="" class="img-fluid">
-              <!-- </a> -->
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="certificates-grid">
+          
+          <div class="certificate-item" data-aos="zoom-in" data-aos-delay="100">
+            <div class="certificate-card">
+              <div class="certificate-image">
+                <img src="assets/img/Certificate/1964528-Ankit Kadam(TCS)/1964528-Ankit Kadam(TCS)-1.png"
+                  alt="TCS Internship Certificate" class="img-fluid">
+                <div class="certificate-overlay">
+                  <div class="overlay-content">
+                    <i class="fas fa-search-plus"></i>
+                    <h4>TCS Internship</h4>
+                    <p>Tata Consultancy Services</p>
+                    <span class="view-certificate">Click to View</span>
+                  </div>
+                </div>
+              </div>
+              <div class="certificate-info">
+                <h4>TCS Internship</h4>
+                <p>Tata Consultancy Services • Feb-Jul 2021</p>
+                <span class="certificate-badge">Professional Experience</span>
+              </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <!-- <a href="assets/img/Certificate/certificate of WordPress/certificate of WordPress-1.png"
-                class="gallery-lightbox" data-gall="gallery-item"> -->
-                <img src="assets/img/Certificate/certificate of WordPress/certificate of WordPress-1.png" alt=""
-                  class="img-fluid">
-              <!-- </a> -->
+          <div class="certificate-item" data-aos="zoom-in" data-aos-delay="200">
+            <div class="certificate-card">
+              <div class="certificate-image">
+                <img src="assets/img/Certificate/Angular essential Training_LinkedIn Learning Certificate/Angular essential Training_LinkedIn Learning Certificate-1.png"
+                  alt="Angular Essential Training Certificate" class="img-fluid">
+                <div class="certificate-overlay">
+                  <div class="overlay-content">
+                    <i class="fas fa-search-plus"></i>
+                    <h4>Angular Essential Training</h4>
+                    <p>LinkedIn Learning</p>
+                    <span class="view-certificate">Click to View</span>
+                  </div>
+                </div>
+              </div>
+              <div class="certificate-info">
+                <h4>Angular Essential Training</h4>
+                <p>LinkedIn Learning • Feb 2021</p>
+                <span class="certificate-badge">Web Development</span>
+              </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <!-- <a href="assets/img/Certificate/Git essential training_LinkedIn Learning Certificate/Git essential training_LinkedIn Learning Certificate-1.png"
-                class="gallery-lightbox" data-gall="gallery-item"> -->
-                <img
-                  src="assets/img/Certificate/Git essential training_LinkedIn Learning Certificate/Git essential training_LinkedIn Learning Certificate-1.png"
-                  alt="" class="img-fluid">
-              <!-- </a> -->
+          <div class="certificate-item" data-aos="zoom-in" data-aos-delay="300">
+            <div class="certificate-card">
+              <div class="certificate-image">
+                <img src="assets/img/Certificate/Git essential training_LinkedIn Learning Certificate/Git essential training_LinkedIn Learning Certificate-1.png"
+                  alt="Git Essential Training Certificate" class="img-fluid">
+                <div class="certificate-overlay">
+                  <div class="overlay-content">
+                    <i class="fas fa-search-plus"></i>
+                    <h4>Git Essential Training</h4>
+                    <p>LinkedIn Learning</p>
+                    <span class="view-certificate">Click to View</span>
+                  </div>
+                </div>
+              </div>
+              <div class="certificate-info">
+                <h4>Git Essential Training</h4>
+                <p>LinkedIn Learning • Mar 2021</p>
+                <span class="certificate-badge">Version Control</span>
+              </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <!-- <a href="assets/img/Certificate/1964528-Ankit Kadam(TCS)/1964528-Ankit Kadam(TCS)-1.png"
-                class="gallery-lightbox" data-gall="gallery-item"> -->
-                <img src="assets/img/Certificate/1964528-Ankit Kadam(TCS)/1964528-Ankit Kadam(TCS)-1.png" alt=""
-                  class="img-fluid">
-              <!-- </a> -->
+          <div class="certificate-item" data-aos="zoom-in" data-aos-delay="400">
+            <div class="certificate-card">
+              <div class="certificate-image">
+                <img src="assets/img/Certificate/certificate of WordPress/certificate of WordPress-1.png"
+                  alt="WordPress Course Certificate" class="img-fluid">
+                <div class="certificate-overlay">
+                  <div class="overlay-content">
+                    <i class="fas fa-search-plus"></i>
+                    <h4>WordPress Course</h4>
+                    <p>Just Web Infotech</p>
+                    <span class="view-certificate">Click to View</span>
+                  </div>
+                </div>
+              </div>
+              <div class="certificate-info">
+                <h4>WordPress Course</h4>
+                <p>Just Web Infotech • Aug 2020</p>
+                <span class="certificate-badge">CMS Development</span>
+              </div>
             </div>
           </div>
 
+        </div>
         </div>
     </section><!-- End certificate Section -->
 
